--- a/Index.html
+++ b/Index.html
@@ -1,42 +1,44 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Happy Birthday, Aneke Nnenna Maryann!</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="hero">
-    <div class="overlay">
-      <h1>Happy Birthday</h1>
-      <h2>Aneke Nnenna Maryann</h2>
-      <p>Wishing you joy, laughter, and all the love in the world on your special day!</p>
+
+    <div class="hero">
+      <div class="overlay">
+        <h1>Happy Birthday</h1>
+        <h2>Aneke Nnenna Maryann</h2>
+        <p>Wishing you joy, laughter, and all the love in the world on your special day!</p>
+      </div>
     </div>
-  </div>
 
-  <section class="gallery">
-    <h2>Gallery</h2>
-    <div class="images">
-      <img src="main_image.jpeg" alt="Aneke Nnenna Maryann">
-      <img src="image_2.jpeg" alt="Cherished Memories">
-      <img src="image_3.jpeg" alt="Forever Beautiful">
-    </div>
-  </section>
+    <section class="gallery">
+      <h2>Gallery</h2>
+      <div class="images">
+        <img src="main_image.jpg" alt="Aneke Nnenna Maryann">
+        <img src="image_2.jpg" alt="Cherished Memories">
+        <img src="image_3.jpg" alt="Forever Beautiful">
+      </div>
+    </section>
 
-  <section class="about">
-    <h2>About Aneke Nnenna Maryann</h2>
-    <p>Aneke Nnenna Maryann is a shining light in our lives. Today, we celebrate the love, kindness, and beauty she brings to the world.</p>
-  </section>
+    <section class="about">
+      <h2>About Aneke Nnenna Maryann</h2>
+      <p>Aneke Nnenna Maryann is a shining light in our lives. Today, we celebrate the love, kindness, and beauty she brings to the world.</p>
+    </section>
 
-  <section class="wishes">
-    <h2>Leave a Birthday Wish</h2>
-    <textarea placeholder="Type your wish here..."></textarea>
-    <button>Send Wish</button>
-  </section>
+    <section class="wishes">
+      <h2>Leave a Birthday Wish</h2>
+      <textarea placeholder="Type your wish here..."></textarea>
+      <button>Send Wish</button>
+    </section>
 
-  <footer>
-    <p>Made with ❤️ for Aneke Nnenna Maryann</p>
-  </footer>
+    <footer>
+      <p>Made with ❤️ for Aneke Nnenna Maryann</p>
+    </footer>
 </body>
 </html>
