--- a/index.html
+++ b/index.html
@@ -1,44 +1,175 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Happy Birthday, Aneke Nnenna Maryann!</title>
-  <link rel="stylesheet" href="styles.css">
+  <style>
+    /* Global Styles */
+    body {
+      margin: 0;
+      font-family: 'Arial', sans-serif;
+      color: #333;
+    }
+
+    h1, h2 {
+      font-family: 'Georgia', serif;
+      margin: 0;
+    }
+
+    p {
+      margin: 10px 0;
+      line-height: 1.6;
+    }
+
+    /* Hero Section */
+    .hero {
+      position: relative;
+      height: 100vh;
+      background: url('main_image.jpg') no-repeat center center/cover;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+
+    .hero .overlay {
+      background-color: rgba(0, 0, 0, 0.5);
+      color: #fff;
+      padding: 20px;
+      border-radius: 10px;
+    }
+
+    .hero h1 {
+      font-size: 3rem;
+      color: gold;
+    }
+
+    .hero h2 {
+      font-size: 2rem;
+      margin: 10px 0;
+    }
+
+    .hero p {
+      font-size: 1.2rem;
+    }
+
+    /* Gallery Section */
+    .gallery {
+      text-align: center;
+      padding: 40px 20px;
+      background-color: #f7f7f7;
+    }
+
+    .gallery h2 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+
+    .gallery .images {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+
+    .gallery img {
+      max-width: 300px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    /* About Section */
+    .about {
+      padding: 40px 20px;
+      text-align: center;
+    }
+
+    .about h2 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+
+    .about p {
+      font-size: 1.2rem;
+    }
+
+    /* Wishes Section */
+    .wishes {
+      text-align: center;
+      padding: 40px 20px;
+      background-color: #ffe6e6;
+    }
+
+    .wishes h2 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+
+    .wishes textarea {
+      width: 80%;
+      height: 100px;
+      padding: 10px;
+      border: 2px solid #ccc;
+      border-radius: 5px;
+      font-size: 1rem;
+    }
+
+    .wishes button {
+      margin-top: 10px;
+      padding: 10px 20px;
+      font-size: 1rem;
+      color: #fff;
+      background-color: red;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .wishes button:hover {
+      background-color: darkred;
+    }
+
+    /* Footer */
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: #333;
+      color: #fff;
+    }
+  </style>
 </head>
 <body>
-
-    <div class="hero">
-      <div class="overlay">
-        <h1>Happy Birthday</h1>
-        <h2>Aneke Nnenna Maryann</h2>
-        <p>Wishing you joy, laughter, and all the love in the world on your special day!</p>
-      </div>
+  <div class="hero">
+    <div class="overlay">
+      <h1>Happy Birthday</h1>
+      <h2>Aneke Nnenna Maryann</h2>
+      <p>Wishing you joy, laughter, and all the love in the world on your special day!</p>
     </div>
+  </div>
 
-    <section class="gallery">
-      <h2>Gallery</h2>
-      <div class="images">
-        <img src="main_image.jpg" alt="Aneke Nnenna Maryann">
-        <img src="image_2.jpg" alt="Cherished Memories">
-        <img src="image_3.jpg" alt="Forever Beautiful">
-      </div>
-    </section>
+  <section class="gallery">
+    <h2>Gallery</h2>
+    <div class="images">
+      <img src="main_image.jpg" alt="Aneke Nnenna Maryann">
+      <img src="image_2.jpg" alt="Cherished Memories">
+      <img src="image_3.jpg" alt="Forever Beautiful">
+    </div>
+  </section>
 
-    <section class="about">
-      <h2>About Aneke Nnenna Maryann</h2>
-      <p>Aneke Nnenna Maryann is a shining light in our lives. Today, we celebrate the love, kindness, and beauty she brings to the world.</p>
-    </section>
+  <section class="about">
+    <h2>About Aneke Nnenna Maryann</h2>
+    <p>Aneke Nnenna Maryann is a shining light in our lives. Today, we celebrate the love, kindness, and beauty she brings to the world.</p>
+  </section>
 
-    <section class="wishes">
-      <h2>Leave a Birthday Wish</h2>
-      <textarea placeholder="Type your wish here..."></textarea>
-      <button>Send Wish</button>
-    </section>
+  <section class="wishes">
+    <h2>Leave a Birthday Wish</h2>
+    <textarea placeholder="Type your wish here..."></textarea>
+    <button>Send Wish</button>
+  </section>
 
-    <footer>
-      <p>Made with ❤️ for Aneke Nnenna Maryann</p>
-    </footer>
+  <footer>
+    <p>Made with ❤ for Aneke Nnenna Maryann</p>
+  </footer>
 </body>
 </html>
