--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
   <section class="wishes">
     <h2>Leave a Birthday Wish</h2>
-    <textarea placeholder="Type your wish here... AMEN"></textarea>
+    <textarea placeholder="Type your wish here..."></textarea>
     <button>Send Wish</button>
   </section>
 
